Fixed the overflow-y issue
Also some more styling.

--- a/external/style/less/finna-custom.less
+++ b/external/style/less/finna-custom.less
@@ -1,22 +1,37 @@
 /*body {
   background-color: red;
-}*/
+}
+
+@import "finna-variables";
+@import "navigation";
+@import "searchbar";
+@import "search";
+
+*/
 //@import "custom-variables";
 //@import "navigation";
 //@import "searchbar";
 
 
+
 html {
     font-size: 1.06em;
     font-family: sans-serif!important;
+    overflow-x: hidden;
 }
 
 body {
     font-family: 'Open Sans', sans-serif!important;
 }
 
+
+html, body, .container {
+
+}
+
+
 h1, h2, h3, h4, h5, h6, header, section[role=search], footer {
-    font-family: 'Lato', sans-serif!important;
+    font-family: 'Lato', sans-serif;
 
 }
 
