--- a/external/style/less/navigation.less
+++ b/external/style/less/navigation.less
@@ -256,8 +256,7 @@ header .btn-primary {
 }
 
 .navbar-brand:hover {
-  border-left: none!important;
-  border-bottom: solid 4px @nav-hover-border-color;
+  border-left: solid 4px @nav-hover-border-color;
   margin-left: -4px;
 }
 
