--- a/external/style/less/searchbar.less
+++ b/external/style/less/searchbar.less
@@ -122,7 +122,7 @@ section[role=search], .search-form-container  {
 }
 
 .searchbox-columns .search {
-  min-width: 100%;
+  min-width: 80vmin;
   z-index: 900;
   padding-bottom: 2em;
 }
